syntax = "proto3";
package user;
option go_package=".;proto";

service UserSrv{
  //用户信息
  rpc GetUserById(douyin_user_request) returns (douyin_user_response);//通过Id查询用户
  rpc GetUserInfoByName(douyin_user_request) returns (douyin_user_response);//通过用户名查询用户信息
  //用户登录
  rpc UserLoginByName(douyin_user_login_request) returns(douyin_user_login_response);//通过用户名密码登录。包含了验证密码
  //用户注册
  rpc UserRegister(douyin_user_register_request) returns(douyin_user_register_response);//
}


message douyin_user_register_request{
  string username = 1;//注册同户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}
message douyin_user_register_response{
  int32 status_code =1; // 状态码，0-成功，其他值-失败。
  string status_msg =2;//返回状态描述
  int64  user_id = 3;//用户id
  string  token =4;//用户鉴权
}

message douyin_user_login_request {
  string username = 1;//登录用户名
  string password = 2; // 登录密码

  string encryptedPassword = 3;//加密
}
message douyin_user_login_response{
  int32  status_code =1; // 状态吗，0-成功,其他值-失败
  string status_msg =2; //返回状态描述
  int64  user_id = 3; //用户id
  string token =4;     //用户鉴权token
}

message User {
  int64  id = 1; //用户id
  string  name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64  follower_count = 4; // 粉丝总数
  bool  is_follow = 5; // true-已关注，false-未关注。

  string password = 6;//用户密码
}

message douyin_user_request {
  int64  user_id = 1; //用户id
  string token = 2; // 用户鉴权token

  string name = 3; //用户名称
}
message douyin_user_response {
  int32  status_code = 1; // 状态码，0-成功，其他值，失败
  string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}




